# iron_mq_rust

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: lib.rs
src/http_client/: mod.rs
src/queue/: message.rs  mod.rs  queue_info.rs
tests/: client.rs
