[package]
name = "iron_mq_rust"
version = "0.1.0"
authors = [
    "Maksym Shekhovets <maximsh@interlink-ua.com>",
    "Oleksii Lystopadov <oleksiily@softwareplanetgroup.com>"
]
description = "Rust library for IronMQ."

[dependencies]
futures = "0.1"
hyper = "0.14.12"
tokio-core = "0.1"
hyper-tls = "0.1"
num_cpus = "1.8"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
